fix: atualizar cores de fundo e texto para melhor contraste e legibilidade

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,15 +3,8 @@
 @tailwind utilities;
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --background: #081225;
+  --foreground: #e5e7eb;
 }
 
 * {
@@ -19,13 +12,15 @@
   scrollbar-color: #e9e9e9 #1e293b;
 }
 
-
 body {
   color: var(--foreground);
   background: var(--background);
   font-family: 'Poppins', sans-serif;
   transition: background 0.3s, color 0.3s;
 }
+
+
+/* ANIMAÇÕES */
 
 
 @keyframes fadeIn {
